k8s/jupyter.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jupyter
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
        - name: jupyter-container
          #TODO adicionar pacotes de pip obrigatórios numa imagem custom: pip3 install elasticsearch-dsl
          image: jupyter/all-spark-notebook:lab-3.2.4
          #command: ["/bin/bash"]
          #args: ["/opt/jupyter/scripts/jupyter-entrypoint.sh", "/opt/jupyter/scripts/jupyter-cmd.sh"]
          ports:
            - containerPort: 8888
            - containerPort: 4040
          volumeMounts:
            - name: notebooks
              mountPath: "/home/jovyan/work/"
              subPath: "notebooks"
            - name: es-ca-volume
              mountPath: "/mnt/ca.crt"
              subPath: "tls.crt"
              readOnly: true
            - name: hive-config
              mountPath: "/usr/local/spark/conf/hive-site.xml"
              subPath: "hive.xml"
            - name: truststore-volume
              mountPath: /usr/local/spark/truststore.jks
              subPath: "truststore.jks"
      volumes:
      - name: notebooks
        persistentVolumeClaim:
          claimName: jupyter-notebooks-pvc
      - name: hive-config
        configMap:
          name: hive-config
      - name: es-ca-volume
        secret:
        #TODO TEMPLATE talvez
          secretName: elasticsearch-es-remote-ca
      - name: truststore-volume
        emptyDir: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: In
                values: 
                - "true"
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-svc
spec:
  selector:
    app: jupyter
  ports:
    - port: 8888
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: spark-ui-svc
spec:
  selector:
    app: jupyter
  ports:
    - port: 4040
      targetPort: 4040
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: jupyter.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jupyter-svc
              port:
                number: 8888
